CSS not finished

--- a/SintLucas-Funnel/index.html
+++ b/SintLucas-Funnel/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css">
+    <title>SintLucas Funnel - Gijs van Loon</title>
   </head>
   <body>
     <header>
-      <div class="container">
-        <a href="#" title="funnel">funnel.</a>
+      <div class="titleContainer">
+        <img src="logo.svg">
       </div>
     </header>
 
     <main>
-      <section>
+      <section class="firstSection">
         <div class="container">
           <h1>Some title</h1>
           <p>
@@ -28,7 +29,7 @@
 
       <section>
         <header>
-          <div class="container">
+          <div class="foldContainer">
             <span>1</span>
             Who are you?
           </div>
@@ -46,7 +47,7 @@
               </div>
 
               <div>
-                <button>Continue</button>
+                <button class="btnContinue">Continue</button>
               </div>
             </fieldset>
           </form>
@@ -55,7 +56,7 @@
 
       <section>
         <header>
-          <div class="container">
+          <div class="foldContainer">
             <span>2</span>
             What is your address?
           </div>
@@ -81,8 +82,8 @@
               </div>
 
               <div>
-                <button>Previous</button>
-                <button>Continue</button>
+                <button class="btnPrevious">Previous</button>
+                <button class="btnContinue">Continue</button>
               </div>
             </fieldset>
           </form>
@@ -91,7 +92,7 @@
 
       <section>
         <header>
-          <div class="container">
+          <div class="foldContainer">
             <span>3</span>
             What is your contact preference?
           </div>
@@ -119,8 +120,8 @@
               </div>
 
               <div>
-                <button>Previous</button>
-                <button>Continue</button>
+                <button class="btnPrevious">Previous</button>
+                <button class="btnContinue">Continue</button>
               </div>
             </fieldset>
           </form>
@@ -129,7 +130,7 @@
 
       <section>
         <header>
-          <div class="container">
+          <div class="foldContainer">
             <span>4</span>
             Choose your product
           </div>
@@ -146,7 +147,7 @@
                 </ul>
               </div>
               <div>
-                <button>Choose this product</button>
+                <button class="btnContinue">Choose this product</button>
               </div>
             </div>
 
@@ -160,7 +161,7 @@
                 </ul>
               </div>
               <div>
-                <button>Choose this product</button>
+                <button class="btnContinue">Choose this product</button>
               </div>
             </div>
           </div>
